--- a/style.css
+++ b/style.css
@@ -1,66 +1,68 @@
-*{
-    margin : 0;
-    padding :0;
+* {
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
-body{
-    background-color: #548687;
-    text-align: center;
-}
-.container{
-    height: 70vh;
-     display: flex;
-    
-    justify-content: center;
-    align-items: center;
+h1 {
+  background-color: #081b31;
+  color: #fff;
+  height: 5rem;
+  line-height: 5rem;
 }
 
-.game{
-    height: 60vmin;
-    width: 60vmin;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5vmin;
-
-}
-.box{
-    height: 18vmin;
-    width: 18vmin;
-    border-radius: 1rem;
-    border: none;
-    box-shadow: 0 0 1rem rgba(0,0,0.25);
-    font-size: 8vmin;
-    color: #b0413e;
-   
+.choice {
+  height: 165px;
+  width: 165px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#reset-btn{
-    padding: 1rem;
-    font-size: 1.25rem;
-    background-color: #191913;
-    color: aliceblue;
-    border-radius: 1rem;
+.choice:hover {
+  cursor: pointer;
+  background-color: #081b31;
 }
 
-#new-btn{
-    padding: 1rem;
-    font-size: 1.25rem;
-    background-color: #191913;
-    color: aliceblue;
-    border-radius: 1rem;
+img {
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
-#msg{
-    color: white;
-    font-size: 8vmin;
+.choices {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  margin-top: 5rem;
 }
 
-#msg-container{
-    height: 30vmin;
+.score-board {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  margin-top: 3rem;
+  gap: 5rem;
 }
 
-.hide{
-    display: none;
+#user-score,
+#comp-score {
+  font-size: 4rem;
+}
+
+.msg-container {
+  margin-top: 5rem;
+}
+
+#msg {
+  background-color: #081b31;
+  color: #fff;
+  font-size: 2rem;
+  display: inline;
+  padding: 1rem;
+  border-radius: 1rem;
 }
